[package]
name = "ruru"
version = "0.7.3"
authors = ["Dmitry Gritsay <unseductable@gmail.com>"]

description = "Native Ruby extensions in Rust"
documentation = "http://d-unseductable.github.io/ruru/ruru/index.html"
homepage = "https://github.com/d-unseductable/ruru"
repository = "https://github.com/d-unseductable/ruru"
readme = "README.md"
keywords = ["ruby", "ruru"]
license = "MIT"

[dependencies]
libc = "0.2.10"

[dependencies.ruby-sys]
git = "https://github.com/steveklabnik/ruby-sys.git"
rev = "68c1406e9b358d4997f02bd332781daf9c0f5d29"
